compilers/ID/cool/regression/BASE_semanttest/inherit.cl.stderr
./BASE_semanttest/inherit.cl:12: No 'main' method in class Main.
Compilation halted due to static semantic errors.
